--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.13.2
 aiosignal==1.4.0
 aiosqlite==0.21.0
 annotated-types==0.7.0
+anthropic==0.75.0
 anyio==4.12.0
 appdirs==1.4.4
 application_properties==0.9.0
@@ -33,13 +34,14 @@ docker==7.1.0
 docstring_parser==0.17.0
 durationpy==0.10
 et_xmlfile==2.0.0
+fastuuid==0.14.0
 filelock==3.20.1
 flatbuffers==25.9.23
 frozenlist==1.8.0
 fsspec==2025.12.0
 google-auth==2.45.0
 googleapis-common-protos==1.72.0
-grpcio==1.76.0
+grpcio==1.67.1
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
@@ -64,9 +66,15 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kubernetes==34.1.0
 lancedb==0.5.7
+langchain==1.2.0
 langchain-core==0.3.80
 langchain-openai==0.2.14
+langgraph==1.0.5
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.3.0
 langsmith==0.4.59
+litellm==1.49.7
 lxml==6.0.2
 Markdown==3.4.3
 markdown-it-py==4.0.0
@@ -90,6 +98,7 @@ opentelemetry-proto==1.34.1
 opentelemetry-sdk==1.34.1
 opentelemetry-semantic-conventions==0.55b1
 orjson==3.11.5
+ormsgpack==1.12.1
 overrides==7.7.0
 packaging==25.0
 pdfminer.six==20251107
@@ -163,6 +172,7 @@ watchfiles==1.1.1
 wcwidth==0.2.14
 websocket-client==1.9.0
 websockets==15.0.1
+xxhash==3.6.0
 yarl==1.22.0
 youtube-transcript-api==1.2.3
 zipp==3.23.0
