--- a/requirements.txt
+++ b/requirements.txt
@@ -66,13 +66,13 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kubernetes==34.1.0
 lancedb==0.5.7
-langchain==1.2.0
-langchain-core==0.3.80
-langchain-openai==0.2.14
-langgraph==1.0.5
-langgraph-checkpoint==3.0.1
-langgraph-prebuilt==1.0.5
-langgraph-sdk==0.3.0
+langchain
+langchain-core
+langchain-openai
+langgraph
+langgraph-checkpoint
+langgraph-prebuilt
+langgraph-sdk
 langsmith==0.4.59
 litellm==1.49.7
 lxml==6.0.2
